Fix UI scaling on mobile

--- a/app/css/custom.scss
+++ b/app/css/custom.scss
@@ -32,7 +32,7 @@ input[type=search] {
   }
 
   .button-bar {
-    white-space: nowrap;
+    //white-space: nowrap;
     button:not(:last-child) {
       margin-right: 10px;
     }
